fixes in package.json

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
       content="Little Lemon restaurant - providing amazing fusion twist"
     />
     <meta property="og:type" content="website"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Lemon-logo.ico" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/little-lemon-title.png" />
+    <meta name="og:image" content="www.littleLemonRestaurant.com"/>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
